// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c72 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c5 {
  padding-right: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c22 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c39 {
  padding-right: 16px;
  padding-left: 16px;
}

.c41 {
  padding-left: 12px;
}

.c45 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c48 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c51 {
  background: #ffffff;
  padding: 16px;
}

.c70 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c52 {
  border-radius: 4px;
}

.c54 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c56 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c58 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c63 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c65 {
  color: #666687;
  width: 0.6875rem;
}

.c68 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c64 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c24 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c28 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c29 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c40 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c44 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c50 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c61 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c62 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c23 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c23 > * + * {
  margin-top: 16px;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c49 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c49 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c57 > * {
  margin-left: 0;
  margin-right: 0;
}

.c57 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c30 {
  line-height: 0;
}

.c32 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c32::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c32[aria-disabled='true'] {
  color: inherit;
}

.c32:focus {
  outline: none;
  box-shadow: none;
}

.c31 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c31:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c66 path {
  fill: #666687;
}

.c37 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c37:focus {
  outline: none;
}

.c37[aria-disabled='true'] {
  cursor: not-allowed;
}

.c36 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c36:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c42 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c42 svg path {
  fill: #666687;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c43 svg {
  width: 0.375rem;
}

.c38 {
  width: 100%;
}

.c34 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c34:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c35 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c35::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35:focus-within {
  outline: none;
}

.c33 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c33 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c33 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c33 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c33 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c59 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c59[aria-disabled='true'] {
  pointer-events: none;
}

.c59[aria-disabled='true'] svg path {
  fill: #666687;
}

.c59 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c59 svg path {
  fill: #4945ff;
}

.c59:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c59:focus-visible {
  outline: none;
}

.c59:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:focus-visible {
  outline: none;
}

.c25 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c46 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c26 {
  grid-column: span 6;
  max-width: 100%;
}

.c47 {
  grid-column: span 7;
  max-width: 100%;
}

.c69 {
  grid-column: span 5;
  max-width: 100%;
}

.c53 {
  border: 1px solid #f6f6f9;
}

.c53:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c53:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c53:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c53:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c67 {
  border: 1px solid #ffffff;
}

.c67:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c67:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c67:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c67:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c60 {
  text-align: left;
}

.c60 > span {
  max-width: 100%;
}

.c60 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c60 svg path {
  fill: #8e8ea9;
}

.c55 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c55:hover svg path {
  fill: #4945ff;
}

.c21 {
  height: calc(100vh - 56px * 3 - 24px);
}

.c71 {
  position: -webkit-sticky;
  position: sticky;
  top: 56px;
  height: calc(100vh - 56px);
}

@media (max-width:68.75rem) {
  .c26 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c26 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c47 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c47 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c69 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c69 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c18"
      >
        <div
          class="c1 c9 c19 c20 c21"
          spacing="6"
        >
          <div
            class="c1 c22"
          >
            <div
              class="c1 c9 c19 c23"
              spacing="4"
            >
              <h2
                class="c7 c24"
              >
                Details
              </h2>
              <div
                class="c1 c25"
              >
                <div
                  class="c26"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c19 c27"
                          spacing="1"
                        >
                          <label
                            class="c7 c28"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c29 c30"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c31"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c32"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c33"
                    >
                      <div>
                        <div
                          class="c1 c9 c19 c27"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c28"
                              for="textarea-2"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c34"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c35"
                              id="textarea-2"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c27"
                        spacing="1"
                      >
                        <span
                          class="c7 c28"
                          for="select-3"
                          id="select-3-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c29 c30"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c36"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-3-label select-3-content"
                            class="c37"
                            id="select-3"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c38"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c39"
                              >
                                <span
                                  class="c7 c40"
                                  id="select-3-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c41 c42 c43"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c44"
                    />
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c19 c27"
                        spacing="1"
                      >
                        <span
                          class="c7 c28"
                          for="select-4"
                          id="select-4-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c29 c30"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c36"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-4-label select-4-content"
                            class="c37"
                            id="select-4"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c38"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c39"
                              >
                                <span
                                  class="c7 c40"
                                  id="select-4-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c41 c42 c43"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c45 c46"
          >
            <div
              class="c47"
            >
              <div
                class="c1 c48"
              >
                <div
                  class="c1 c9 c19 c49"
                  spacing="2"
                >
                  <h2
                    class="c7 c24"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c50"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c51"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c52 c53"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c54 c10 c55"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c56 c11 c57"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-13"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-13"
                          class="c1 c9 c58 c11 c59 c60"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c61"
                          >
                            <span
                              class="c7 c62"
                              id="accordion-label-accordion-13"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c57"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c63 c64"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c65 c66"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c52 c67"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c68 c10 c55"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c56 c11 c57"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-14"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-14"
                          class="c1 c9 c58 c11 c59 c60"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c61"
                          >
                            <span
                              class="c7 c62"
                              id="accordion-label-accordion-14"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c57"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c63 c64"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c65 c66"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c69"
            >
              <div
                class="c1 c70 c71"
              >
                <div
                  class="c1 c9 c19 c49"
                  spacing="2"
                >
                  <h3
                    class="c7 c24"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c50"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c72"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c81 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c5 {
  padding-right: 8px;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c23 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c24 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c30 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c46 {
  padding-right: 16px;
  padding-left: 16px;
}

.c48 {
  padding-left: 12px;
}

.c55 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c58 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c60 {
  background: #ffffff;
  padding: 16px;
}

.c79 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c61 {
  border-radius: 4px;
}

.c63 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c65 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c67 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c72 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c74 {
  color: #666687;
  width: 0.6875rem;
}

.c77 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c73 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c27 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c29 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c32 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c35 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c36 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c47 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c51 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c53 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c70 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c71 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 24px;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 4px;
}

.c31 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c31 > * + * {
  margin-top: 16px;
}

.c59 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c59 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c66 > * {
  margin-left: 0;
  margin-right: 0;
}

.c66 > * + * {
  margin-left: 12px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c82 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c82 .c7 {
  color: #ffffff;
}

.c82[aria-disabled='true'] .c7 {
  color: #666687;
}

.c82[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c7 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c7 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  background-color: #f6f6f9;
}

.c15:active {
  background-color: #eaeaef;
}

.c15 .c7 {
  color: #32324d;
}

.c15 svg > g,
.c15 svg path {
  fill: #32324d;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c18 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 .c7 {
  color: #ffffff;
}

.c18[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true'] .c7 {
  color: #666687;
}

.c18[aria-disabled='true'] svg > g,.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c18[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c18[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c18[aria-disabled='true']:active svg > g,.c18[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c18:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c18:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c18 svg > g,
.c18 svg path {
  fill: #ffffff;
}

.c37 {
  line-height: 0;
}

.c39 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c39::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c39[aria-disabled='true'] {
  color: inherit;
}

.c39:focus {
  outline: none;
  box-shadow: none;
}

.c38 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c38:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c75 path {
  fill: #666687;
}

.c44 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c44:focus {
  outline: none;
}

.c44[aria-disabled='true'] {
  cursor: not-allowed;
}

.c43 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c43:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c52 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c52:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c49 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c49 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c49 svg path {
  fill: #666687;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c50 svg {
  width: 0.375rem;
}

.c54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c54 svg {
  width: 0.375rem;
}

.c45 {
  width: 100%;
}

.c41 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c41:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c42::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42:focus-within {
  outline: none;
}

.c40 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c40 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c40 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c40 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c40 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c68 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c68[aria-disabled='true'] {
  pointer-events: none;
}

.c68[aria-disabled='true'] svg path {
  fill: #666687;
}

.c68 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c68 svg path {
  fill: #4945ff;
}

.c68:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c68:focus-visible {
  outline: none;
}

.c68:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c25 {
  margin-right: 24px;
}

.c25 svg {
  width: 2rem;
  height: 2rem;
}

.c28 {
  word-break: break-all;
}

.c0:focus-visible {
  outline: none;
}

.c33 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c56 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c34 {
  grid-column: span 6;
  max-width: 100%;
}

.c57 {
  grid-column: span 7;
  max-width: 100%;
}

.c78 {
  grid-column: span 5;
  max-width: 100%;
}

.c62 {
  border: 1px solid #f6f6f9;
}

.c62:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c62:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c62:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c62:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c76 {
  border: 1px solid #ffffff;
}

.c76:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c76:hover:not([aria-disabled='true']) .c7 {
  color: #4945ff;
}

.c76:hover:not([aria-disabled='true']) > .c9 {
  background: #f0f0ff;
}

.c76:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c69 {
  text-align: left;
}

.c69 > span {
  max-width: 100%;
}

.c69 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c69 svg path {
  fill: #8e8ea9;
}

.c64 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c64:hover svg path {
  fill: #4945ff;
}

.c22 {
  height: calc(100vh - 56px * 3 - 24px);
}

.c80 {
  position: -webkit-sticky;
  position: sticky;
  top: 56px;
  height: calc(100vh - 56px);
}

@media (max-width:68.75rem) {
  .c34 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c34 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c57 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c57 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c78 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c78 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c1 c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7 c8"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c9 c10"
          >
            <div
              class="c1 c9 c11"
            >
              <h1
                class="c7 c12"
              >
                My super token
              </h1>
            </div>
            <div
              class="c1 c9 c11 c13"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c14 c18"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c5 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c7 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c19"
      >
        <div
          class="c1 c9 c20 c21 c22"
          spacing="6"
        >
          <div
            class="c1 c9 c23 c11"
          >
            <div
              class="c1 c9 c24 c11 c25"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c1 c9 c20 c26"
              spacing="1"
            >
              <div
                class="c1 c9 c11"
              >
                <span
                  class="c7 c27 c28"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c7 c29"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c1 c30"
          >
            <div
              class="c1 c9 c20 c31"
              spacing="4"
            >
              <h2
                class="c7 c32"
              >
                Details
              </h2>
              <div
                class="c1 c33"
              >
                <div
                  class="c34"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c1 c9 c20 c26"
                          spacing="1"
                        >
                          <label
                            class="c7 c35"
                            for="textinput-28"
                            required=""
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              Name
                              <span
                                class="c7 c36 c37"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c1 c9 c10 c38"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c39"
                              id="textinput-28"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c34"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c40"
                    >
                      <div>
                        <div
                          class="c1 c9 c20 c26"
                          spacing="1"
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            <label
                              class="c7 c35"
                              for="textarea-29"
                            >
                              <div
                                class="c1 c9 c11"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c41"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c42"
                              id="textarea-29"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c34"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c35"
                          for="select-30"
                          id="select-30-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token duration
                            <span
                              class="c7 c36 c37"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c43"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-30-label select-30-content"
                            class="c44"
                            id="select-30"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c45"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c46"
                              >
                                <span
                                  class="c7 c47"
                                  id="select-30-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c48 c49 c50"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c7 c51"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c34"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c1 c9 c20 c26"
                        spacing="1"
                      >
                        <span
                          class="c7 c35"
                          for="select-31"
                          id="select-31-label"
                          required=""
                        >
                          <div
                            class="c1 c9 c11"
                          >
                            Token type
                            <span
                              class="c7 c36 c37"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c1 c9 c11 c52"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-31-label select-31-content"
                            class="c44"
                            id="select-31"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c1 c9 c10 c45"
                          >
                            <div
                              class="c1 c9 c11"
                            >
                              <div
                                class="c1 c46"
                              >
                                <span
                                  class="c7 c53"
                                  id="select-31-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c1 c9 c11"
                            >
                              <button
                                aria-hidden="true"
                                class="c1 c48 c49 c54"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c55 c56"
          >
            <div
              class="c57"
            >
              <div
                class="c1 c58"
              >
                <div
                  class="c1 c9 c20 c59"
                  spacing="2"
                >
                  <h2
                    class="c7 c32"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c7 c29"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c60"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c61 c62"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c63 c10 c64"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c65 c11 c66"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-42"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-42"
                          class="c1 c9 c67 c11 c68 c69"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c70"
                          >
                            <span
                              class="c7 c71"
                              id="accordion-label-accordion-42"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c66"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c72 c73"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c74 c75"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c61 c76"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c9 c77 c10 c64"
                      cursor=""
                    >
                      <div
                        class="c1 c9 c65 c11 c66"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-43"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-43"
                          class="c1 c9 c67 c11 c68 c69"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c7 c70"
                          >
                            <span
                              class="c7 c71"
                              id="accordion-label-accordion-43"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c9 c11 c66"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c9 c72 c73"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c1 c74 c75"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c78"
            >
              <div
                class="c1 c79 c80"
              >
                <div
                  class="c1 c9 c20 c59"
                  spacing="2"
                >
                  <h3
                    class="c7 c32"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c7 c29"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c81"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
